[project]
name = "fulcrum-sdk"
version = "0.1.0"
description = "Python SDK for Fulcrum runtime integration"
readme = "README.md"
authors = [{ name = "Benjamin Ye", email = "ben@daisyloop.com" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fulcrum_sdk"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "ty>=0.0.1a6",
    "respx>=0.22",
]

[tool.ruff]
line-length = 100
lint.select = ["E", "W", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["fulcrum_sdk"]

[tool.ty.src]
include = ["fulcrum_sdk", "tests"]

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
